Fix table alignment and spacing
Data had padding but the data titles did not

--- a/ui/mods/com.pa.quitch.gwaioverhaul/gw_play/gwo_panel.css
+++ b/ui/mods/com.pa.quitch.gwaioverhaul/gw_play/gwo_panel.css
@@ -48,6 +48,7 @@
 
 .gwo-info .td {
   display: table-cell;
+  padding: 1px 0;
   padding-bottom: 2px;
 }
 
