--- a/ui/mods/com.pa.quitch.gwaioverhaul/gw_play/section_of_foreign_intelligence/section_of_foreign_intelligence.css
+++ b/ui/mods/com.pa.quitch.gwaioverhaul/gw_play/section_of_foreign_intelligence/section_of_foreign_intelligence.css
@@ -62,4 +62,5 @@
 
 .section-of-foreign-intelligence .td {
   display: table-cell;
+  padding: 1px 0;
 }
